--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8"/>
   <title>chatterbox</title>
-  <link rel="stylesheet" href="styles/styles.css">
-
+  <link rel="stylesheet" href="styles/styles.css"/>
   <!-- dependencies -->
   <script src="bower_components/jquery/jquery.min.js"></script>
   <script src="bower_components/underscore/underscore.js"></script>
@@ -13,27 +12,21 @@
   <script src="scripts/app.js"></script>
 </head>
 <body>
-
   <div id="main">
-
     <h1>chatterbox</h1>
-
-
+    
+    <!--Rooms Drop Down-->
     <div class="lobby">
-      <!--Rooms Drop Down-->
       <label for="roomSelect">Rooms </label>
-      <select id="roomSelect" name="room"><option value="choose">Home Base</option>
+      <select id="roomSelect" name="room">
+        <option value="choose">All Rooms</option>
       </select>
-
-      <!--Add a New Chatroom input field
-        <form id="newRoom"> 
-        <label for="newRoom"> Add a new Chat Room </label>
-        <input type="text" id="chatRoomName" placeholder="Chatroom Name"/>
-        <input type="submit" value="submit"/>
-      </form>-->
-
-    </div>
-
+    <!-- Friends Drop Down -->
+    <label for="friendSelect">Friends </label>
+      <select id="friendSelect" name="friends">
+        <option value="choose">All Friends</option>
+      </select>
+    </div>   
     <!--Add a new message Form-->
     <div class= "newMessageForm">
       <form id="newMessage"> 
@@ -42,27 +35,21 @@
          <input type="text" id="username" name="username" style="width:300px"/>
        </div>
        <div>
-
-       <label for="message">Message</label>
+        <label for="message">Message</label>
         <input type="text" id="message" name="message" style="width:300px" />
       </div>
       <div>
         <label for="room">Room</label>
         <input type="text" id="room" name="room" style="width:300px"/>
       </div>
-
       <input type="submit" value="submit"/>
-     
     </form>
   </div>
-
+  
   <!--Where the new Chats are appended to-->
   <div id="chats">
   </div>
 
-  <div class="friends"> </div>
 </div>
-
-
 </body>
 </html>
