added button, added rooms and friends arrays that are refreshed each time the chats are refresshed

--- a/client/index.html
+++ b/client/index.html
@@ -46,6 +46,7 @@
     </form>
   </div>
   
+  <button id = "clear">Remove Messages</button>
   <!--Where the new Chats are appended to-->
   <div id="chats">
   </div>
